sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: not found: value i
	i=0
        ^AlgCombSort:9: error: not found: value i
	while (i + ecart < getNombreValeurs-2) {
               ^AlgCombSort:10: error: not found: value i
		if (getValeur(i) > getValeur(i+ecart)) {
                              ^AlgCombSort:11: error: not found: value i
			echange(i,i+ecart)
                                ^AlgCombSort:14: error: not found: value i
		i=i+1
                ^