sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
var ecart:Int=getNombreValeurs-2
var fini:Boolean=false
while (ecart>1 || fini==false) {
	fini=true
	ecart = (ecart.toDouble / 1.3).toInt
	i=0
	while (i + ecart < getNombreValeurs-2) {
		if (getValeur(i) > getValeur(i+ecart)) {
			echange(i,i+ecart)
			fini=false
		}
		i=i+1
	}
}
}